# vn-market-data-platform

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  README.md  pyproject.toml
.github/workflows/: contract.yml  deploy-prod.yml  deploy-staging.yml  integration.yml  unit.yml
.streamlit/: config.toml
cloudbuild/: alerter.cloudbuild.yaml  backfill.cloudbuild.yaml  batch-eod.cloudbuild.yaml  batch-reference.cloudbuild.yaml  curate.cloudbuild.yaml  ops-cost-report.cloudbuild.yaml  ops-coverage-check.cloudbuild.yaml  ops-data-quality.cloudbuild.yaml  ops-dlq-drain.cloudbuild.yaml  ops-dlq-replay.cloudbuild.yaml  publisher.cloudbuild.yaml  research-app.cloudbuild.yaml  writers.cloudbuild.yaml
docs/: 00-overview.md  01-architecture.md  03-orchestration.md  04-alerting.md  05-runbook-incident.md  06-runbook-backfill.md  07-onboarding.md  11-cicd-setup.md
docs/adr/: 0001-pubsub-from-day-one.md  0002-gcs-parquet-lakehouse.md  0003-no-composer-use-workflows.md
infra/bootstrap/: README.md  main.tf  variables.tf
infra/calendar/: README.md  schema.json  vn-trading-days-2021.json  vn-trading-days-2022.json  vn-trading-days-2023.json  vn-trading-days-2024.json  vn-trading-days-2025.json
infra/secrets/: README.md
infra/symbols/: README.md  symbols-shard-0.json  symbols-shard-1.json  symbols-shard-2.json  symbols-shard-3.json
infra/wif/: README.md  main.tf  variables.tf
infra/workflows/: _shared-check-trading-day.yaml  calendar-refresh-yearly.yaml  curate-fallback.yaml  daily-ohlcv-refresh.yaml  eod-pipeline.yaml  intraday-coverage-check.yaml  monthly-cost-report.yaml  publisher-scaler.yaml  reference-refresh.yaml  shared-check-trading-day.yaml
notebooks/: 00-quickstart.ipynb
scripts/: apply-bq-schemas.sh  bootstrap-gcp-project.sh  build-and-push.sh  deploy-services.sh  refresh-mvs.sh  run-backfill.sh
sql/schemas/: corp_actions.sql  daily_ohlcv.sql  fundamentals.sql  futures_contracts.sql  index_values.sql  quotes_l1.sql  quotes_l2.sql  tickers.sql  ticks.sql
sql/views/: v_daily_factors.sql  v_session_vwap.sql  v_top_of_book.sql
src/alerter/: Dockerfile  __main__.py  dedupe.py  formatter.py  telegram_client.py
src/curate/: Dockerfile  __main__.py  adjustments.py  dedup.py  derived_columns.py
src/ops/: __init__.py
src/publisher/: Dockerfile  __main__.py  config.py  heartbeat.py  pubsub_publisher.py  shard.py  ws_client.py
src/research_app/: Dockerfile  __main__.py  auth.py
src/shared/: alerts.py  calendar.py  fallback.py  schemas.py  throttle.py
src/vnmarket/: __init__.py  _config.py  cache.py  client.py  gaps.py
src/writers/: Dockerfile  __init__.py  __main__.py  buffer.py  gcs_uploader.py  parquet_writer.py  receipts.py  schema_validator.py
(+147 files in other folders)
